--- a/index.html
+++ b/index.html
@@ -55,7 +55,19 @@
         document.getElementById('menu').classList.toggle('hidden');
     });
 </script>
-
+<!-- banner section -->
+<section class="bg-pink-50 text-center my-1 pt-4 px-5 md:px-20">
+  <h1 class="text-2xl md:text-4xl font-bold text-gray-900">
+      Freshness <span class="text-green-600">You Can <br>
+      Count</span> On, Prices You’ll Love!
+  </h1>
+  <p class="text-gray-600 mt-4 max-w-2xl mx-auto">
+      Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we have got you covered every day!
+  </p>
+  <div class="flex justify-center mt-10">
+      <img src="./c2-assets/hero-vegetables.png" alt="" class="w-full max-w-md md:max-w-lg lg:max-w-xl">
+  </div>
+</section>
   
 </body>
 </html>
