Services section done

--- a/index.html
+++ b/index.html
@@ -68,6 +68,47 @@
       <img src="./c2-assets/hero-vegetables.png" alt="" class="w-full max-w-md md:max-w-lg lg:max-w-xl">
   </div>
 </section>
+<!-- Services-->
+ <main class="py-10 px-8">
+    <div>
+      <h2 class="text-lg font-bold text-green-600 mb-6">
+        Services
+      </h2>
+    </div>
+    <div class="grid gap-6 md:grid-cols-3 sm:grid-cols-2 grid-cols-1">
+      
+      <div class="bg-gray-100 rounded-lg p-6 text-center shadow-md">
+        <div class="flex justify-center mb-4">
+          <img class="bg-white bg-auto rounded-xl " src="/c2-assets/service.png" alt="" class="w-16 h-12"/>
+        </div>
+        <h3 class="text-lg font-bold">24/7 Services</h3>
+        <p class="text-gray-600 text-sm mt-2">
+          24/7 services provide round-the-clock support, ensuring assistance is available anytime, anywhere.
+        </p>
+      </div>
+
+    
+      <div class="bg-gray-100 rounded-lg p-6 text-center shadow-md">
+        <div class="flex justify-center mb-4">
+          <img class="bg-white bg-auto rounded-xl " src="/c2-assets/delivery.png" alt="" class="w-16 h-12"/>
+        </div>
+        <h3 class="text-lg font-bold">Fast Delivery</h3>
+        <p class="text-gray-600 text-sm mt-2">
+          Fast delivery prioritizes speed, ensuring quick shipment and arrival of goods or services, often within hours or a few days.
+        </p>
+      </div>
+
+      <div class="bg-gray-100 rounded-lg p-6 text-center shadow-md">
+        <div class="flex justify-center mb-4">
+          <img class="bg-white bg-auto rounded-xl " src="/c2-assets/healthy.png" alt="" class="w-16 h-12"/>
+        </div>
+        <h3 class="text-lg font-bold">Healthy products</h3>
+        <p class="text-gray-600 text-sm mt-2">
+          Healthy products promote well-being by being low in harmful ingredients and often rich in nutrients, supporting a balanced lifestyle.
+        </p>
+      </div>
+    </div>
+ </main>
   
 </body>
 </html>
