try main section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,96 @@
       </div>
     </div>
  </main>
+ <!-- Offer section -->
+ <section class=" bg-pink-50 text-center my-12 pt-20 pb-20 px-5 md:px-20">
+  <div>
+    <h2 class="justify-center text-lg font-bold text-green-600 mb-8">
+      Popular Products
+    </h2>
+  </div>
+ <div class="grid gap-6 md:grid-cols-3 lg:grid-cols-4 sm:grid-cols-2          grid-cols-1">
   
+ 
+  <div class="bg-green-500 text-white pt-4 pl-6 rounded-lg flex flex-col       justify-between shadow-lg md:col-span-1 sm:col-span-2">
+    <div>
+      <h2 class="text-2xl font-bold">30% off</h2>
+      <p class="mt-2 text-sm">
+        Discover a world of treats, toys, and essentials handpicked for you.
+      </p>
+    </div>
+    <button class="bg-white text-green-600 px-4 py-2 rounded-lg mt-4 font-semibold shadow-md w-28 h-12">
+      Buy Now
+    </button>
+    <div class="flex justify-center">
+      <img class="bg-auto rounded-xl align-bottom" src="/c2-assets/vegetable-offer.png" alt="" class="w-16 h-20"/>
+    </div>
+  </div>
+  <div class="flex flex-col justify-center shadow-lg md:col-span-1 sm:col-span-2 gap-6 pl-22 ">
+    <div class="bg-white p-4 rounded-lg shadow-md text-center w-56 h-20 flex justify-center">
+      <div>
+        <img class="rounded-lg bg-red-200" src="/c2-assets/onion.jpg" alt="">
+      </div>
+      <span class="text-yellow-500 text-sm"><i class="fa fa-star"></i></span>
+      <span class="ml-1 text-sm font-medium">4.5</span>
+      <h3 class="text-lg font-semibold mt-2">Onion 1KG</h3>
+      <p class="text-gray-600 text-sm">$39.99</p>
+    </div>
+    <div class="bg-white p-4 rounded-lg shadow-md text-center w-56 h-20 flex justify-center">
+      <div>
+        <img class="rounded-lg bg-red-200" src="/c2-assets/onion.jpg" alt="">
+      </div>
+      <span class="text-yellow-500 text-sm"><i class="fa fa-star"></i></span>
+      <span class="ml-1 text-sm font-medium">4.5</span>
+      <h3 class="text-lg font-semibold mt-2">Onion 1KG</h3>
+      <p class="text-gray-600 text-sm">$39.99</p>
+    </div>
+    <div class="bg-white p-4 rounded-lg shadow-md text-center w-56 h-20 flex justify-center">
+      <div>
+        <img class="rounded-lg bg-red-200" src="/c2-assets/onion.jpg" alt="">
+      </div>
+      <span class="text-yellow-500 text-sm"><i class="fa fa-star"></i></span>
+      <span class="ml-1 text-sm font-medium">4.5</span>
+      <h3 class="text-lg font-semibold mt-2">Onion 1KG</h3>
+      <p class="text-gray-600 text-sm">$39.99</p>
+    </div>
+  </div>  
+ </div>
+</section>
+<!-- araival and Offer -->
+<div class=" px-8">
+  <h2 class="text-lg font-bold text-green-600 ">
+    Services
+  </h2>
+</div>
+ <div class="flex justify-center m-8 grid lg:grid-cols-2 sm:grid-cols-1">
+  
+  <div class=" justify-center m-8 grid lg:grid-cols-2 sm:grid-cols-1">
+    <div class="flex p-8 w-156 h-72 rounded-lg bg-green-800">
+      <div>
+        <img src="/c2-assets/dawat-logo.png" alt="">
+        <button class="bg-green-300 w-48 h-12 rounded-lg mt-8 mb-6 text-white font-semibold text-lg ">Cook Exotic Dishes</button>
+        <p class="text-white font-medium">UP to <strong class="text-lg">20% OFF</strong></p>
+      </div>
+      <div>
+        <img class="ml-12 -my-14 h-68" src="/c2-assets/dawat-mock-up.png" alt="">
+      </div>
+      </div>
+  </div>
+  <div>
+    <div class="flex p-4 w-120 h-72 mt-8 rounded-lg bg-blue-800">
+      <div>
+        <img src="/c2-assets/india-gate-logo.png" alt="">
+        <button class="bg-green-300 w-48 h-12 rounded-lg mt-6 mb-6 text-white font-semibold text-lg ">World’s No.1 Rice</button>
+        <p class="text-white font-medium">UP to <strong class="text-lg">40% OFF</strong></p>
+      </div>
+      <div>
+        <img class="ml-16 -my-4" src="/c2-assets/india-gate-mock-up.png" alt="">
+      </div>
+      </div>
+  </div>
+  </div>
+
+ </div>
+
 </body>
 </html>
