Offer section done

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     Services
   </h2>
 </div>
- <div class="flex justify-center m-8 grid lg:grid-cols-2 sm:grid-cols-1">
+ <div class="max-w-500 ml-28 flex justify-between m-8 grid lg:grid-cols-2 sm:grid-cols-1 sm:justify-center">
   
   <div class=" justify-center m-8 grid lg:grid-cols-2 sm:grid-cols-1">
     <div class="flex p-8 w-156 h-72 rounded-lg bg-green-800">
@@ -197,8 +197,23 @@
       </div>
   </div>
   </div>
+</div>
 
- </div>
-
+  <div class="ml-24 mr-24 rounded-lg bg-pink-50 py-10 px-8 grid gap-6 md:grid-cols-2 sm:grid-col-1 grid-col-1">
+    <div class="">
+      <img src="/c2-assets/vegetable-busket.png" alt="">
+    </div>
+    <div class="mt-16">
+      <h2 class="font-bold" >Get Grocery News!</h2>
+      <p class="mt-2 mb-8" >Exclusive training tips, ticks, product deals and more.</p>
+      <form class=" bg-slate-300 rounded-lg text-white text-center p-1">
+          <input class="border-slate-200 placeholder-slate-400 contrast-more:border-slate-400 contrast-more:placeholder-slate-500"/>
+          <p class="mb-4 text-center contrast-more:opacity-100 text-slate-600 text-sm">
+            Inter your Email...
+          </p>
+      </form>
+      <button class="mt-6 bg-green-600 text-white px-4 py-1 rounded-lg hover:bg-green-700">Register</button>
+    </div>
+  </div>
 </body>
 </html>
