--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
   </div>
   </div>
 </div>
-
-  <div class="ml-24 mr-24 rounded-lg bg-pink-50 py-10 px-8 grid gap-6 md:grid-cols-2 sm:grid-col-1 grid-col-1">
+<!-- Get Grocery News! -->
+  <div class="relative ml-24 mr-24 rounded-lg bg-pink-50 py-10 px-8 grid gap-6 md:grid-cols-2 sm:grid-col-1 grid-col-1">
     <div class="">
       <img src="/c2-assets/vegetable-busket.png" alt="">
     </div>
@@ -216,4 +216,33 @@
     </div>
   </div>
 </body>
+<!-- footer -->
+ <footer class="absolute bg-green-600 pt-80 pb-14 pl-24  justify-around max-h-800 grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 sm:justify-center ">
+    <div>
+      <img src="/c2-assets/logo-footer.png" alt="">
+      <p class="text-white mt-4">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
+    </div>
+    <div>
+      <ul class="text-white">
+        <li><a href="">Products</a></li>
+        <li class="mt-4 mb-4"><a href="">Services</a></li>
+        <li><a href="">Contact Us</a></li>
+      </ul>
+    </div>
+    <div class="text-white">
+      <h4 class="mb-4">Follow Us</h4>
+      <div>
+      <button class="">
+        <i class="fa-brands fa-facebook"></i>
+      </button>
+      <button class="ml-4 mr-4">
+        <i class="fa-brands fa-instagram"></i>
+      </button>
+      <button>
+        <i class="fa-brands fa-linkedin"></i>
+      </button>
+    </div>
+    </div>
+ </footer>
+
 </html>
