--- a/index.html
+++ b/index.html
@@ -170,21 +170,21 @@
     Services
   </h2>
 </div>
- <div class="max-w-500 ml-28 flex justify-between m-8 grid lg:grid-cols-2 sm:grid-cols-1 sm:justify-center">
+ <div class="max-w-500  flex justify-between gap-8 mt-8 mb-64 grid lg:grid-cols-2 sm:grid-cols-1 sm:justify-center ">
   
-  <div class=" justify-center m-8 grid lg:grid-cols-2 sm:grid-cols-1">
-    <div class="flex p-8 w-156 h-72 rounded-lg bg-green-800">
+  <div class=" justify-center m-8">
+    <div class="flex p-8 w-124 h-72 rounded-lg bg-green-800">
       <div>
         <img src="/c2-assets/dawat-logo.png" alt="">
         <button class="bg-green-300 w-48 h-12 rounded-lg mt-8 mb-6 text-white font-semibold text-lg ">Cook Exotic Dishes</button>
         <p class="text-white font-medium">UP to <strong class="text-lg">20% OFF</strong></p>
       </div>
       <div>
-        <img class="ml-12 -my-14 h-68" src="/c2-assets/dawat-mock-up.png" alt="">
+        <img class="ml-12  h-68" src="/c2-assets/dawat-mock-up.png" alt="">
       </div>
       </div>
   </div>
-  <div>
+  <div class="sm:mb-120">
     <div class="flex p-4 w-120 h-72 mt-8 rounded-lg bg-blue-800">
       <div>
         <img src="/c2-assets/india-gate-logo.png" alt="">
@@ -199,7 +199,8 @@
   </div>
 </div>
 <!-- Get Grocery News! -->
-  <div class="relative ml-24 mr-24 rounded-lg bg-pink-50 py-10 px-8 grid gap-6 md:grid-cols-2 sm:grid-col-1 grid-col-1">
+<section class="relative">
+  <div class="absolute bottom-88 ml-24 mr-24 rounded-lg bg-pink-50 py-10 px-8 grid gap-6 md:grid-cols-2 sm:grid-col-1 grid-col-1">
     <div class="">
       <img src="/c2-assets/vegetable-busket.png" alt="">
     </div>
@@ -217,7 +218,7 @@
   </div>
 </body>
 <!-- footer -->
- <footer class="absolute bg-green-600 pt-80 pb-14 pl-24  justify-around max-h-800 grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 sm:justify-center ">
+ <footer class=" bg-green-600 pt-80 pb-14 pl-24  justify-around max-h-800 grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 sm:justify-center ">
     <div>
       <img src="/c2-assets/logo-footer.png" alt="">
       <p class="text-white mt-4">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
@@ -244,5 +245,5 @@
     </div>
     </div>
  </footer>
-
+</section>
 </html>
